[Ayush Gupta] Refactored. integrate media service and complete backend-frontend alignment across all services