@@ -6,12 +6,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -34,7 +36,9 @@ public class JwtFilter extends OncePerRequestFilter {
             try {
                 if (jwtUtil.validateToken(token)) {
 
-                    Long userId = jwtUtil.extractUserId(token);
+                    String userId = jwtUtil.extractUserId(token);
+
+                    String role = jwtUtil.extractRole(token);
 
                     request.setAttribute("userId", userId);
 
@@ -42,14 +46,16 @@ public class JwtFilter extends OncePerRequestFilter {
                             new UsernamePasswordAuthenticationToken(
                                     userId,
                                     null,
-                                    Collections.emptyList()
+                                    List.of(new SimpleGrantedAuthority("ROLE_" + role))
                             );
 
                     SecurityContextHolder.getContext().setAuthentication(authentication);
+                    System.out.println("✅ Auth set: " + SecurityContextHolder.getContext().getAuthentication());
                 }
 
             } catch (Exception ignored) {
                 // optionally log
+                System.out.println("❌ JWT ERROR: " + ignored.getMessage());
             }
         }
 
